--- a/packages/demo/src/styles.scss
+++ b/packages/demo/src/styles.scss
@@ -5,5 +5,7 @@ html, body {
   margin: 0;
 }
 body {
-  background: white;
+  //background: white;
+  color: black;
+  background: radial-gradient(at 50% 60%, #873740 0%, #272730 40%, #171720 80%, #070710 100%);
 }
