--- a/packages/demo/src/styles.scss
+++ b/packages/demo/src/styles.scss
@@ -6,6 +6,7 @@ html, body {
 }
 body {
   //background: white;
-  color: black;
-  background: radial-gradient(at 50% 60%, #873740 0%, #272730 40%, #171720 80%, #070710 100%);
+  //color: black;
+  background: black;
+  //background: radial-gradient(at 50% 60%, #873740 0%, #272730 40%, #171720 80%, #070710 100%);
 }
