--- a/docs/src/css/custom.css
+++ b/docs/src/css/custom.css
@@ -28,10 +28,9 @@
   padding: 0 var(--ifm-pre-padding);
 }
 
-.embedded-sandbox {
+iframe {
   width: 100%;
-  height: 400px;
-  border: 0;
-  border-radius: 4px;
+  height: 500px;
   overflow: hidden;
+  border: 0;
 }
