--- a/packages/demo/src/styles.scss
+++ b/packages/demo/src/styles.scss
@@ -4,10 +4,9 @@ body {
   width: 100%;
   height: 100%;
   margin: 0;
+  font-family: Poppins, sans-serif;
 }
+
 body {
-  //background: white;
-  //color: black;
   background: black;
-  //background: radial-gradient(at 50% 60%, #873740 0%, #272730 40%, #171720 80%, #070710 100%);
 }
