--- a/packages/demo/src/app/robot-expressive/robot.component.html
+++ b/packages/demo/src/app/robot-expressive/robot.component.html
@@ -4,4 +4,12 @@
     (ready)="onReady(robot.scene, robot.animations)"
     (animateReady)="onAnimateReady($event)"
   ></ngt-primitive>
+
+  <ngt-robot-gui
+    [robot]="robot.scene"
+    [states]="states"
+    [emotes]="emotes"
+    [animationMixer]="animationMixer"
+    (act)="fadeToAction($event.state, $event.duration)"
+  ></ngt-robot-gui>
 </ng-container>
