--- a/old/packages/demo/src/styles.css
+++ b/old/packages/demo/src/styles.css
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
-html, body {
+html,
+body {
   margin: 0;
   box-sizing: border-box;
   height: 100%;
