--- a/libs/documentations/src/css/custom.css
+++ b/libs/documentations/src/css/custom.css
@@ -4,36 +4,52 @@
  * work well for content-centric websites.
  */
 
+@import url('https://fonts.googleapis.com/css2?family=Anonymous+Pro:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,300;0,400;0,600;1,300;1,400;1,600&display=swap');
+
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #2e8555;
-  --ifm-color-primary-dark: #29784c;
-  --ifm-color-primary-darker: #277148;
-  --ifm-color-primary-darkest: #205d3b;
-  --ifm-color-primary-light: #33925d;
-  --ifm-color-primary-lighter: #359962;
-  --ifm-color-primary-lightest: #3cad6e;
-  --ifm-code-font-size: 95%;
+  --ifm-color-primary: #475569;
+  --ifm-color-primary-dark: #1e293b;
+  --ifm-color-primary-darker: #1e293b;
+  --ifm-color-primary-darkest: #0f172a;
+  --ifm-color-primary-light: #64748b;
+  --ifm-color-primary-lighter: #94a3b8;
+  --ifm-color-primary-lightest: #cbd5e1;
+  --ifm-code-font-size: 100%;
+
+    --ifm-font-family-base: 'Nunito', system-ui, -apple-system, Segoe UI, Roboto,
+    Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji;
+    --ifm-font-family-monospace: 'Anonymous Pro', Menlo, monospace;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: #21af90;
-  --ifm-color-primary-darker: #1fa588;
-  --ifm-color-primary-darkest: #1a8870;
-  --ifm-color-primary-light: #29d5b0;
-  --ifm-color-primary-lighter: #32d8b4;
-  --ifm-color-primary-lightest: #4fddbf;
+  --ifm-color-primary: #d1d5db;
+  --ifm-color-primary-dark: #9ca3af;
+  --ifm-color-primary-darker: #6b7280;
+  --ifm-color-primary-darkest: #4b5563;
+  --ifm-color-primary-light: #e5e7eb;
+  --ifm-color-primary-lighter: #f3f4f6;
+  --ifm-color-primary-lightest: #f9fafb;
 }
 
 .docusaurus-highlight-code-line {
-  background-color: rgba(0, 0, 0, 0.1);
+  background-color: rgba(0, 0, 0, 0.2);
   display: block;
   margin: 0 calc(-1 * var(--ifm-pre-padding));
   padding: 0 var(--ifm-pre-padding);
 }
 
 [data-theme='dark'] .docusaurus-highlight-code-line {
-  background-color: rgba(0, 0, 0, 0.3);
+  background-color: rgba(103, 103, 103, 0.25);
+}
+
+iframe.code-demo {
+    width: 100%;
+    height: 500px;
+    border: 0;
+    border-radius: 4px;
+    overflow: hidden;
+    margin: 2rem 0;
 }
