--- a/libs/documentations/src/css/custom.css
+++ b/libs/documentations/src/css/custom.css
@@ -9,40 +9,40 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #475569;
-  --ifm-color-primary-dark: #1e293b;
-  --ifm-color-primary-darker: #1e293b;
-  --ifm-color-primary-darkest: #0f172a;
-  --ifm-color-primary-light: #64748b;
-  --ifm-color-primary-lighter: #94a3b8;
-  --ifm-color-primary-lightest: #cbd5e1;
-  --ifm-code-font-size: 100%;
+    --ifm-color-primary: #475569;
+    --ifm-color-primary-dark: #1e293b;
+    --ifm-color-primary-darker: #1e293b;
+    --ifm-color-primary-darkest: #0f172a;
+    --ifm-color-primary-light: #64748b;
+    --ifm-color-primary-lighter: #94a3b8;
+    --ifm-color-primary-lightest: #cbd5e1;
+    --ifm-code-font-size: 100%;
 
     --ifm-font-family-base: 'Nunito', system-ui, -apple-system, Segoe UI, Roboto,
-    Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji;
+        Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji;
     --ifm-font-family-monospace: 'Anonymous Pro', Menlo, monospace;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-  --ifm-color-primary: #d1d5db;
-  --ifm-color-primary-dark: #9ca3af;
-  --ifm-color-primary-darker: #6b7280;
-  --ifm-color-primary-darkest: #4b5563;
-  --ifm-color-primary-light: #e5e7eb;
-  --ifm-color-primary-lighter: #f3f4f6;
-  --ifm-color-primary-lightest: #f9fafb;
+    --ifm-color-primary: #d1d5db;
+    --ifm-color-primary-dark: #9ca3af;
+    --ifm-color-primary-darker: #6b7280;
+    --ifm-color-primary-darkest: #4b5563;
+    --ifm-color-primary-light: #e5e7eb;
+    --ifm-color-primary-lighter: #f3f4f6;
+    --ifm-color-primary-lightest: #f9fafb;
 }
 
 .docusaurus-highlight-code-line {
-  background-color: rgba(0, 0, 0, 0.2);
-  display: block;
-  margin: 0 calc(-1 * var(--ifm-pre-padding));
-  padding: 0 var(--ifm-pre-padding);
+    background-color: rgba(0, 0, 0, 0.2);
+    display: block;
+    margin: 0 calc(-1 * var(--ifm-pre-padding));
+    padding: 0 var(--ifm-pre-padding);
 }
 
 [data-theme='dark'] .docusaurus-highlight-code-line {
-  background-color: rgba(103, 103, 103, 0.25);
+    background-color: rgba(103, 103, 103, 0.25);
 }
 
 iframe.code-demo {
@@ -52,4 +52,13 @@ iframe.code-demo {
     border-radius: 4px;
     overflow: hidden;
     margin: 2rem 0;
+}
+
+a[href]:not(.menu__link):not(.navbar__brand):not(.navbar__item):not(.table-of-contents__link):not(.pagination-nav__link):not(.theme-edit-this-page) {
+    text-decoration: underline;
+}
+
+a.navbar__item:hover,
+a.table-of-contents__link:hover {
+    text-decoration: underline;
 }
