--- a/libs/documentations/src/css/custom.css
+++ b/libs/documentations/src/css/custom.css
@@ -21,6 +21,7 @@
   --ifm-font-family-base: 'Nunito', system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif,
     Apple Color Emoji, Segoe UI Emoji;
   --ifm-font-family-monospace: 'Anonymous Pro', Menlo, monospace;
+  --docusaurus-highlighted-code-line-bg: var(--ifm-color-primary-lightest);
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
@@ -32,17 +33,7 @@
   --ifm-color-primary-light: #e5e7eb;
   --ifm-color-primary-lighter: #f3f4f6;
   --ifm-color-primary-lightest: #f9fafb;
-}
-
-.docusaurus-highlight-code-line {
-  background-color: rgba(103, 103, 103, 0.15);
-  display: block;
-  margin: 0 calc(-1 * var(--ifm-pre-padding));
-  padding: 0 var(--ifm-pre-padding);
-}
-
-[data-theme='dark'] .docusaurus-highlight-code-line {
-  background-color: rgba(103, 103, 103, 0.25);
+    --docusaurus-highlighted-code-line-bg: var(--ifm-color-primary-darkest);
 }
 
 iframe.code-demo {
